syntax = "proto3";

import "google/protobuf/timestamp.proto";

package comment;

service Comment {
    rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse);
    rpc CreateComment(CreateCommentRequest) returns (SingleComment);
    rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse);
    rpc RemoveContent(RemoveContentRequest) returns (RemoveContentResponse);
    rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse);
    rpc GetOwner(GetOwnerRequest) returns (GetOwnerResponse); 
}

message ListCommentsRequest {
    string postUid = 1;
    string commentUid = 2;
    int32 pageSize = 3;
    int32 pageNumber = 4;
}

message ListCommentsResponse {
    repeated SingleComment comments = 1;
    int32 pageSize = 2;
    int32 pageNumber = 3;
}

message SingleComment {
    string uid = 1;
    string userUid = 2;
    string postUid = 3;
    string body = 4;
    string parentUid = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp modifiedAt = 7;
    bool isDeleted = 8;
}

message CreateCommentRequest {
    string token = 1;
    string postUid = 2;
    string body = 3;
    string parentUid = 4;
    string userUid = 5;
}

message UpdateCommentRequest {
    string token = 1;
    string uid = 2;
    string body = 3;
}

message UpdateCommentResponse {

}

message RemoveContentRequest {
    string token = 1;
    string uid = 2;
}

message RemoveContentResponse {

}

message DeleteCommentRequest {
    string token = 1;
    string uid = 2;
}

message DeleteCommentResponse {

}

message GetTokenRequest {
    string appId = 1;
    string appSecret = 2;
}

message GetTokenResponse {
    string token = 1;
}

message GetOwnerRequest {
    string uid = 1;
}

message GetOwnerResponse {
    string ownerUid = 1;
}